fix alignment and color

--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -47,6 +47,8 @@
 	article {
 		header {
 			background: none;
+			text-align: left;
+			color: inherit;
 		}
 	}
 }
